--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,11 +53,11 @@ steps:
     pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
     artifactName: 'moviespage-test-lb'
   
-- task: AzureWebApp@1
+- task: AzureRmWebAppDeployment@4
   inputs:
     azureSubscription: 'Development Integration MSDN (308583db-5571-446d-b880-646fcb826528)'
-    appName: 'MoviesPage-test-lb'
-    package: $(Build.ArtifactStagingDirectory)
+    WebAppName: 'MoviesPage-test-lb'
+    packageForLinux: $(Build.ArtifactStagingDirectory)
 
 
 
