--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ steps:
 - task: AzureRmWebAppDeployment@4
   displayName: 'Azure App Service Deploy: MoviesPage-test-lb'
   inputs:
-    azureSubscription: 'Development Integration MSDN (308583db-5571-446d-b880-646fcb826528)'
+    azureSubscription: 'AzureDevelopment-Test'
     WebAppName: 'MoviesPage-test-lb'
     packageForLinux: '$(Build.ArtifactStagingDirectory)/published'
 
